--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -476,7 +476,10 @@
         "  pergunta = \"Deseja continuar no sistema? [S]/[N]\\t\"\n",
         "  resp_continuar = validacao_respostas(pergunta, ['S','N'])\n",
         "\n",
-        "print(\"\\n\\nSistema Encerrado.\")"
+        "print(\"\\n\\nSistema Encerrado.\")\n",
+        "\n",
+        "\n",
+        "#teste"
       ],
       "metadata": {
         "colab": {
