correção da listagem de cardápios

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -286,13 +286,14 @@
         "\n",
         "    # Listar os pratos do cardápio com nomes e preços\n",
         "    elif comando == 'L':\n",
-        "        print(f\"Cardápio do restaurante {restaurante}:\")\n",
+        "\n",
         "        lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "        if len(lista_cardapio_restaurante) == 0:\n",
-        "            print(\" -> Não há nenhum prato cadastrado no restaurante\", restaurante)\n",
+        "        if len(lista_cardapio_restaurante) == 1:\n",
+        "            print(f\" -> Não há nenhum prato cadastrado no restaurante {restaurante}.\")\n",
         "        else:\n",
-        "            for i in range(1, len(lista_cardapio_restaurante)):\n",
-        "                print(f\"{i} - Prato: {lista_cardapio_restaurante[i][0]}, Preço: R$ {lista_cardapio_restaurante[i][1]}\")\n",
+        "          print(f\"Cardápio do restaurante {restaurante}:\")\n",
+        "          for i in range(1, len(lista_cardapio_restaurante)):\n",
+        "            print(f\"{i} - Prato: {lista_cardapio_restaurante[i][0]}, Preço: R$ {lista_cardapio_restaurante[i][1]}\")\n",
         "\n",
         "\n",
         "#################################################\n",
@@ -486,9 +487,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "01bcf882-71a0-4e38-b2bb-afbb5f5bee89"
+        "outputId": "11cdefc4-e798-4a7a-9752-8690d73989ec"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -502,110 +503,25 @@
             "    1 - Para abrir a gestão de restaurantes\n",
             "    2 - Para abrir a gestão de Cardápios\n",
             "    3 - Sair do Sistema \n",
-            "1\n",
-            "- - - - -> Gestão de Restaurantes <- - - - -\n",
-            "Qual ação deseja realizar?\n",
-            "Para adicionar um restaurante  --- A\n",
-            "Para remover um restaurante    --- R\n",
-            "Para editar informações        --- E\n",
-            "Para listar os restaurantes    --- L\n",
-            "l\n",
-            "Lista de restaurantes:\n",
-            "Nome: Caluma\n",
-            "Endereço: rua 33, número 120, vila sta cecilia\n",
-            "Telefone: 02433428261\n",
-            "Tempo de Preparo: 30.0 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Empanado de peixe\n",
-            "2\t Caipirinha\n",
-            "3\t Polenta Frita\n",
+            "2\n",
+            "- - - - -> Gestão de Cardápios <- - - - -\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Caluma\n",
+            "2\t Toca do Pintado\n",
+            "3\t Brasador Steakhouse\n",
+            "4\t Luso Brasileiro\n",
+            "5\t Alimentare\n",
+            "Informe o índice: \t3\n",
+            "\t\tGESTÃO DE CARDÁPIO:\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Brasador Steakhouse\n",
             "\n",
-            "Nome: Toca do Pintado\n",
-            "Endereço: R. Dezenove-A, 278 - Bela Vista\n",
-            "Telefone: 02432123442\n",
-            "Tempo de Preparo: 55.0 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Moqueca\n",
-            "2\t Filé à Parmegiana\n",
-            "\n",
-            "Nome: Brasador Steakhouse\n",
-            "Endereço: R. Vinte e Um, 56 - Vila Santa Cecília\n",
-            "Telefone: 02433422511\n",
-            "Tempo de Preparo: 40 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "\n",
-            "Nome: Luso Brasileiro\n",
-            "Endereço: Rua 14, 181 Em frente ao Pontual shopping - Vila Santa Cecília\n",
-            "Telefone: 02433420563\n",
-            "Tempo de Preparo: 25.5 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Dobradinha\n",
-            "\n",
-            "Nome: Alimentare\n",
-            "Endereço: R. Sessenta e Dois, 193 - Sessenta, Volta Redonda\n",
-            "Telefone: 02433378487\n",
-            "Tempo de Preparo: 20.3 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Marmitex P\n",
-            "2\t Marmitex G\n",
-            "\n",
-            "Deseja continuar na Gestão de Restaurante? [S]/[N]\ts\n",
-            "Qual ação deseja realizar?\n",
-            "Para adicionar um restaurante  --- A\n",
-            "Para remover um restaurante    --- R\n",
-            "Para editar informações        --- E\n",
-            "Para listar os restaurantes    --- L\n",
-            "l\n",
-            "Lista de restaurantes:\n",
-            "Nome: Caluma\n",
-            "Endereço: rua 33, número 120, vila sta cecilia\n",
-            "Telefone: 02433428261\n",
-            "Tempo de Preparo: 30.0 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Empanado de peixe\n",
-            "2\t Caipirinha\n",
-            "3\t Polenta Frita\n",
-            "\n",
-            "Nome: Toca do Pintado\n",
-            "Endereço: R. Dezenove-A, 278 - Bela Vista\n",
-            "Telefone: 02432123442\n",
-            "Tempo de Preparo: 55.0 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Moqueca\n",
-            "2\t Filé à Parmegiana\n",
-            "\n",
-            "Nome: Brasador Steakhouse\n",
-            "Endereço: R. Vinte e Um, 56 - Vila Santa Cecília\n",
-            "Telefone: 02433422511\n",
-            "Tempo de Preparo: 40 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "\n",
-            "Nome: Luso Brasileiro\n",
-            "Endereço: Rua 14, 181 Em frente ao Pontual shopping - Vila Santa Cecília\n",
-            "Telefone: 02433420563\n",
-            "Tempo de Preparo: 25.5 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Dobradinha\n",
-            "\n",
-            "Nome: Alimentare\n",
-            "Endereço: R. Sessenta e Dois, 193 - Sessenta, Volta Redonda\n",
-            "Telefone: 02433378487\n",
-            "Tempo de Preparo: 20.3 minutos\n",
-            "Cardápio:\n",
-            "  \t Nome do Prato\n",
-            "1\t Marmitex P\n",
-            "2\t Marmitex G\n",
-            "\n",
-            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "    Opções de Ações:\n",
+            "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
+            "    O que deseja fazer: \tl\n",
+            " -> Não há nenhum prato cadastrado no restaurante Brasador Steakhouse.\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
             "Deseja continuar no sistema? [S]/[N]\tn\n",
             "\n",
             "\n",
