--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -474,13 +474,12 @@
         "  elif resp_restaurante_ou_cardapio == '3':\n",
         "    break\n",
         "\n",
-        "  pergunta = \"Deseja continuar no Sistema de Gerenciamento? [S]/[N]\\t\"\n",
+        "  pergunta = \"Deseja continuar no sistema? [S]/[N]\\t\"\n",
         "  resp_continuar = validacao_respostas(pergunta, ['S','N'])\n",
         "\n",
         "print(\"\\n\\nSistema Encerrado.\")\n",
         "\n",
-        "\n",
-        "#teste"
+        "\n"
       ],
       "metadata": {
         "colab": {
@@ -489,7 +488,7 @@
         "id": "qwbRTZSDwkQY",
         "outputId": "11cdefc4-e798-4a7a-9752-8690d73989ec"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -529,15 +528,6 @@
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "btUHB627Dm0i"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
