--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -252,7 +252,7 @@
         "    elif comando == \"R\":\n",
         "        print(\"Lista dos pratos do restaurante\", restaurante)\n",
         "        lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "        if len(lista_cardapio_restaurante) == 0:\n",
+        "        if len(lista_cardapio_restaurante) <= 1:\n",
         "            print(\" -> Não há nenhum prato cadastrado no restaurante\", restaurante)\n",
         "        else:\n",
         "            indice_do_prato = int(num_indice(lista_cardapio_restaurante))\n",
@@ -392,7 +392,7 @@
         "      print(\"Cardápio:\")\n",
         "      restaurante = restaurante_info[0]\n",
         "      lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "      if len(lista_cardapio_restaurante) == 0:\n",
+        "      if len(lista_cardapio_restaurante) <= 1:\n",
         "        print(\" -> Não há nenhum prato cadastrado neste restaurante\")\n",
         "      else:\n",
         "        listar(lista_cardapio_restaurante)\n",
@@ -474,21 +474,22 @@
         "  elif resp_restaurante_ou_cardapio == '3':\n",
         "    break\n",
         "\n",
-        "  pergunta = \"Deseja continuar no sistema? [S]/[N]\\t\"\n",
+        "  pergunta = \"Deseja continuar no Sistema de Gerenciamento? [S]/[N]\\t\"\n",
         "  resp_continuar = validacao_respostas(pergunta, ['S','N'])\n",
         "\n",
         "print(\"\\n\\nSistema Encerrado.\")\n",
         "\n",
-        "\n"
+        "\n",
+        "#teste"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "11cdefc4-e798-4a7a-9752-8690d73989ec"
+        "outputId": "5ade81a0-debe-4290-f4d4-28df43537de6"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -497,6 +498,65 @@
             "Iniciando Sistema de Gestão de Restaurantes\n",
             "Por aqui pode-se editar informações sobre restaurantes e cardápios\n",
             "Deseja iniciar o sistema? [S]/[N]\ts\n",
+            "\n",
+            "  Próxima Ação:\n",
+            "    1 - Para abrir a gestão de restaurantes\n",
+            "    2 - Para abrir a gestão de Cardápios\n",
+            "    3 - Sair do Sistema \n",
+            "1\n",
+            "- - - - -> Gestão de Restaurantes <- - - - -\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante  --- A\n",
+            "Para remover um restaurante    --- R\n",
+            "Para editar informações        --- E\n",
+            "Para listar os restaurantes    --- L\n",
+            "l\n",
+            "Lista de restaurantes:\n",
+            "Nome: Caluma\n",
+            "Endereço: rua 33, número 120, vila sta cecilia\n",
+            "Telefone: 02433428261\n",
+            "Tempo de Preparo: 30.0 minutos\n",
+            "Cardápio:\n",
+            "  \t Nome do Prato\n",
+            "1\t Empanado de peixe\n",
+            "2\t Caipirinha\n",
+            "3\t Polenta Frita\n",
+            "\n",
+            "Nome: Toca do Pintado\n",
+            "Endereço: R. Dezenove-A, 278 - Bela Vista\n",
+            "Telefone: 02432123442\n",
+            "Tempo de Preparo: 55.0 minutos\n",
+            "Cardápio:\n",
+            "  \t Nome do Prato\n",
+            "1\t Moqueca\n",
+            "2\t Filé à Parmegiana\n",
+            "\n",
+            "Nome: Brasador Steakhouse\n",
+            "Endereço: R. Vinte e Um, 56 - Vila Santa Cecília\n",
+            "Telefone: 02433422511\n",
+            "Tempo de Preparo: 40 minutos\n",
+            "Cardápio:\n",
+            " -> Não há nenhum prato cadastrado neste restaurante\n",
+            "\n",
+            "Nome: Luso Brasileiro\n",
+            "Endereço: Rua 14, 181 Em frente ao Pontual shopping - Vila Santa Cecília\n",
+            "Telefone: 02433420563\n",
+            "Tempo de Preparo: 25.5 minutos\n",
+            "Cardápio:\n",
+            "  \t Nome do Prato\n",
+            "1\t Dobradinha\n",
+            "\n",
+            "Nome: Alimentare\n",
+            "Endereço: R. Sessenta e Dois, 193 - Sessenta, Volta Redonda\n",
+            "Telefone: 02433378487\n",
+            "Tempo de Preparo: 20.3 minutos\n",
+            "Cardápio:\n",
+            "  \t Nome do Prato\n",
+            "1\t Marmitex P\n",
+            "2\t Marmitex G\n",
+            "\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\ts\n",
             "\n",
             "  Próxima Ação:\n",
             "    1 - Para abrir a gestão de restaurantes\n",
@@ -520,14 +580,43 @@
             "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
             "    O que deseja fazer: \tl\n",
             " -> Não há nenhum prato cadastrado no restaurante Brasador Steakhouse.\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\ts\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Caluma\n",
+            "2\t Toca do Pintado\n",
+            "3\t Brasador Steakhouse\n",
+            "4\t Luso Brasileiro\n",
+            "5\t Alimentare\n",
+            "Informe o índice: \t1\n",
+            "\t\tGESTÃO DE CARDÁPIO:\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Caluma\n",
+            "\n",
+            "    Opções de Ações:\n",
+            "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
+            "    O que deseja fazer: \tl\n",
+            "Cardápio do restaurante Caluma:\n",
+            "1 - Prato: Empanado de peixe, Preço: R$ 65.0\n",
+            "2 - Prato: Caipirinha, Preço: R$ 30.0\n",
+            "3 - Prato: Polenta Frita, Preço: R$ 32.6\n",
             "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
-            "Deseja continuar no sistema? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
             "\n",
             "\n",
             "Sistema Encerrado.\n"
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "btUHB627Dm0i"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
