Formatação do preço no cardápio

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -77,6 +77,7 @@
         "  for i in range(1,len(lista)):\n",
         "    print(f'{i}\\t {lista[i][0]}')\n",
         "\n",
+        "\n",
         "# função retorna índice\n",
         "def num_indice(lista):\n",
         "  \"\"\"\n",
@@ -104,6 +105,7 @@
         "    print(\"Ação Inválida\")\n",
         "  return 'invalido'\n",
         "\n",
+        "\n",
         "#lista de cardápio por restaurante\n",
         "def cardapio_por_restaurante(lista_cardapio,restaurante):\n",
         "  \"\"\"\n",
@@ -126,6 +128,7 @@
         "      lista_aux_cardapio.append(lista_cardapio[i][1:])\n",
         "  return (lista_aux_cardapio)\n",
         "\n",
+        "\n",
         "#índice do prato da lista geral dos cardápios\n",
         "def indice_prato(lista_cardapio,restaurante, prato):\n",
         "  \"\"\"\n",
@@ -147,6 +150,7 @@
         "    if lista_cardapio[i][0] == restaurante and lista_cardapio[i][1] == prato:\n",
         "      return (i)\n",
         "\n",
+        "\n",
         "# Valida as respostas\n",
         "def validacao_respostas(pergunta, respostas_validas):\n",
         "  \"\"\"\n",
@@ -164,6 +168,7 @@
         "    print(\"Resposta inválida!\")\n",
         "    resp = input(pergunta).upper()[0]# apenas 1ªletra\n",
         "  return resp\n",
+        "\n",
         "\n",
         "# Evita repetições de restaurantes\n",
         "def evitar_repeticao_restaurante(lista_restaurante, restaurante):\n",
@@ -189,6 +194,7 @@
         "  else:\n",
         "    return False\n",
         "\n",
+        "\n",
         "# Evita repetições de pratos no cardapio\n",
         "def evitar_repeticao_pratos(lista_cardapio, nome_prato):\n",
         "  \"\"\"\n",
@@ -212,6 +218,7 @@
         "    return True\n",
         "  else:\n",
         "    return False\n",
+        "\n",
         "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E   C A R D Á P I O\n",
@@ -293,7 +300,7 @@
         "        else:\n",
         "          print(f\"Cardápio do restaurante {restaurante}:\")\n",
         "          for i in range(1, len(lista_cardapio_restaurante)):\n",
-        "            print(f\"{i} - Prato: {lista_cardapio_restaurante[i][0]}, Preço: R$ {lista_cardapio_restaurante[i][1]}\")\n",
+        "            print(f\"{i} - Prato: {lista_cardapio_restaurante[i][0]}, Preço: R$ {lista_cardapio_restaurante[i][1]:.2f}\")\n",
         "\n",
         "\n",
         "#################################################\n",
@@ -486,9 +493,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "11cdefc4-e798-4a7a-9752-8690d73989ec"
+        "outputId": "2b90e281-6712-48ba-a9b6-51d17ff1e29f"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -511,15 +518,18 @@
             "3\t Brasador Steakhouse\n",
             "4\t Luso Brasileiro\n",
             "5\t Alimentare\n",
-            "Informe o índice: \t3\n",
+            "Informe o índice: \t1\n",
             "\t\tGESTÃO DE CARDÁPIO:\n",
             "Foi selecionado o seguinte restaurante:\n",
-            "- Brasador Steakhouse\n",
+            "- Caluma\n",
             "\n",
             "    Opções de Ações:\n",
             "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
             "    O que deseja fazer: \tl\n",
-            " -> Não há nenhum prato cadastrado no restaurante Brasador Steakhouse.\n",
+            "Cardápio do restaurante Caluma:\n",
+            "1 - Prato: Empanado de peixe, Preço: R$ 65.00\n",
+            "2 - Prato: Caipirinha, Preço: R$ 30.00\n",
+            "3 - Prato: Polenta Frita, Preço: R$ 32.60\n",
             "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
             "Deseja continuar no sistema? [S]/[N]\tn\n",
             "\n",
