formatação do endereço e telefone

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -151,7 +151,7 @@
         "      return (i)\n",
         "\n",
         "\n",
-        "# Valida as respostas\n",
+        "# Validação as respostas\n",
         "def validacao_respostas(pergunta, respostas_validas):\n",
         "  \"\"\"\n",
         "  Validação de respostas.\n",
@@ -194,6 +194,41 @@
         "  else:\n",
         "    return False\n",
         "\n",
+        "\n",
+        "def formatacao_endereco():\n",
+        "  \"\"\"\n",
+        "    Padroniza as informações de endereço, pedindo para o usuário item a item do endereço\n",
+        "\n",
+        "    Parâmetros:\n",
+        "        Não há parâmetros de entrada\n",
+        "    Retorno:\n",
+        "        str:endereco Retorna o endereço formatado\n",
+        "  \"\"\"\n",
+        "  rua    = input(\"Informe a rua:\\t\\t\")\n",
+        "  numero = input(\"Informe o número:\\t\")\n",
+        "  bairro = input(\"Informe o bairro:\\t\").title()\n",
+        "  cidade = input(\"Informe a cidade:\\t\").title()\n",
+        "  uf     = input(\"Informe a sigla da unidade federativa:\\t\").upper()\n",
+        "\n",
+        "  endereco = f'Rua {rua}, número {numero}, {bairro}, {cidade}-{uf}'\n",
+        "  return endereco\n",
+        "\n",
+        "\n",
+        "def formatacao_telefone():\n",
+        "  \"\"\"\n",
+        "    Padroniza as informações de telefone,\n",
+        "    pedindo ao usuário separadamente o ddd e o número do telefone\n",
+        "\n",
+        "    Parâmetros:\n",
+        "        Não há parâmetros de entrada\n",
+        "    Retorno:\n",
+        "        str:telefone no formado (00) 0000-0000 ou (00) 0000-00000\n",
+        "  \"\"\"\n",
+        "  ddd    = input(\"Informe o DDD:\\t\")\n",
+        "  numero = input(\"Informe o número:\\t\")\n",
+        "\n",
+        "  telefone = f'({ddd}) {numero[:4]}-{numero[4:]}'\n",
+        "  return telefone\n",
         "\n",
         "# Evita repetições de pratos no cardapio\n",
         "def evitar_repeticao_pratos(lista_cardapio, nome_prato):\n",
@@ -259,7 +294,7 @@
         "    elif comando == \"R\":\n",
         "        print(\"Lista dos pratos do restaurante\", restaurante)\n",
         "        lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "        if len(lista_cardapio_restaurante) == 0:\n",
+        "        if len(lista_cardapio_restaurante) <= 1:\n",
         "            print(\" -> Não há nenhum prato cadastrado no restaurante\", restaurante)\n",
         "        else:\n",
         "            indice_do_prato = int(num_indice(lista_cardapio_restaurante))\n",
@@ -271,7 +306,7 @@
         "    elif comando == 'E':\n",
         "        print(\"Lista dos pratos do restaurante\", restaurante)\n",
         "        lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "        if len(lista_cardapio_restaurante) == 0:\n",
+        "        if len(lista_cardapio_restaurante) <= 1:\n",
         "            print(\" -> Não há nenhum prato cadastrado no restaurante\", restaurante)\n",
         "        else:\n",
         "            indice_do_prato = int(num_indice(lista_cardapio_restaurante))\n",
@@ -337,16 +372,19 @@
         "\n",
         "    else:\n",
         "      lista1.append(restaurante)\n",
-        "      endereco = input('Digite endereço completo do restaurante: ')\n",
+        "      print(\"Digite as informações do endereço:\")\n",
+        "      endereco = formatacao_endereco()\n",
         "      lista1.append(endereco)\n",
-        "      telefone = input('Digite o telefone do restaurante: ')\n",
+        "      print('Digite as informações do telefone do restaurante: ')\n",
+        "      telefone = formatacao_telefone()\n",
+        "\n",
         "      lista1.append(telefone)\n",
-        "      tempo_preparo_pedido = float(input('Digite tempo de preparo do pedido: '))\n",
+        "      tempo_preparo_pedido = int(input('Digite tempo de preparo do pedido: '))\n",
         "      lista1.append(tempo_preparo_pedido)\n",
         "\n",
         "      # Exibir informações do restaurante adicionado\n",
         "      print(\"Informações adicionadas à lista de restaurantes:\")\n",
-        "      listar([cabecalho_lista_restaurante, lista1])\n",
+        "      listar([cabecalho_lista_restaurante, lista1]) #isso está errado\n",
         "      lista_restaurante.append(lista1)\n",
         "\n",
         "  # Removendo um restaurante\n",
@@ -376,10 +414,10 @@
         "        lista_restaurante[editar][0] = nome\n",
         "      elif pergunta_edicao == \"E\":\n",
         "        endereco = input('Qual o novo endereço? ')\n",
-        "        lista_restaurante[editar][1] = endereco\n",
+        "        lista_restaurante[editar][1] = formatacao_endereco()\n",
         "      elif pergunta_edicao == \"T\":\n",
-        "        telefone = input('Qual o novo telefone? ')\n",
-        "        lista_restaurante[editar][2] = telefone\n",
+        "        print('Qual o novo telefone? ')\n",
+        "        lista_restaurante[editar][2] = formatacao_telefone()\n",
         "      elif pergunta_edicao == \"P\":\n",
         "        tempo = input('Qual o novo tempo de preparo do pedido? ')\n",
         "        lista_restaurante[editar][3] = tempo\n",
@@ -399,7 +437,7 @@
         "      print(\"Cardápio:\")\n",
         "      restaurante = restaurante_info[0]\n",
         "      lista_cardapio_restaurante = cardapio_por_restaurante(lista_cardapio, restaurante)\n",
-        "      if len(lista_cardapio_restaurante) == 0:\n",
+        "      if len(lista_cardapio_restaurante) <= 1:\n",
         "        print(\" -> Não há nenhum prato cadastrado neste restaurante\")\n",
         "      else:\n",
         "        listar(lista_cardapio_restaurante)\n",
@@ -481,7 +519,7 @@
         "  elif resp_restaurante_ou_cardapio == '3':\n",
         "    break\n",
         "\n",
-        "  pergunta = \"Deseja continuar no sistema? [S]/[N]\\t\"\n",
+        "  pergunta = \"Deseja continuar no Sistema de Gerenciamento? [S]/[N]\\t\"\n",
         "  resp_continuar = validacao_respostas(pergunta, ['S','N'])\n",
         "\n",
         "print(\"\\n\\nSistema Encerrado.\")\n",
@@ -493,9 +531,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "2b90e281-6712-48ba-a9b6-51d17ff1e29f"
+        "outputId": "6a6ed9d2-8e6c-4ac8-f863-f8f8e33b7884"
       },
-      "execution_count": 8,
+      "execution_count": 71,
       "outputs": [
         {
           "output_type": "stream",
@@ -509,28 +547,31 @@
             "    1 - Para abrir a gestão de restaurantes\n",
             "    2 - Para abrir a gestão de Cardápios\n",
             "    3 - Sair do Sistema \n",
-            "2\n",
-            "- - - - -> Gestão de Cardápios <- - - - -\n",
-            "Informe o restaurante:\t\n",
+            "1\n",
+            "- - - - -> Gestão de Restaurantes <- - - - -\n",
+            "Qual ação deseja realizar?\n",
+            "Para adicionar um restaurante  --- A\n",
+            "Para remover um restaurante    --- R\n",
+            "Para editar informações        --- E\n",
+            "Para listar os restaurantes    --- L\n",
+            "a\n",
+            "Digite o nome do restaurante: amanda\n",
+            "Digite as informações do endereço:\n",
+            "Informe a rua:\t\t23\n",
+            "Informe o número:\t423\n",
+            "Informe o bairro:\tvila\n",
+            "Informe a cidade:\tvolta redonda\n",
+            "Informe a sigla da unidade federativa:\trj\n",
+            "Digite as informações do telefone do restaurante: \n",
+            "Informe o DDD:\t23\n",
+            "Informe o número:\t99991018\n",
+            "Digite tempo de preparo do pedido: 90\n",
+            "Informações adicionadas à lista de restaurantes:\n",
             "  \t Nome\n",
-            "1\t Caluma\n",
-            "2\t Toca do Pintado\n",
-            "3\t Brasador Steakhouse\n",
-            "4\t Luso Brasileiro\n",
-            "5\t Alimentare\n",
-            "Informe o índice: \t1\n",
-            "\t\tGESTÃO DE CARDÁPIO:\n",
-            "Foi selecionado o seguinte restaurante:\n",
-            "- Caluma\n",
-            "\n",
-            "    Opções de Ações:\n",
-            "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
-            "    O que deseja fazer: \tl\n",
-            "Cardápio do restaurante Caluma:\n",
-            "1 - Prato: Empanado de peixe, Preço: R$ 65.00\n",
-            "2 - Prato: Caipirinha, Preço: R$ 30.00\n",
-            "3 - Prato: Polenta Frita, Preço: R$ 32.60\n",
-            "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
+            "1\t Amanda\n",
+            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
+            "Deseja continuar no sistema? [S]/[N]\tm\n",
+            "Resposta inválida!\n",
             "Deseja continuar no sistema? [S]/[N]\tn\n",
             "\n",
             "\n",
@@ -543,16 +584,7 @@
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "_rlZyweG_jKw"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "TCVqYNvJ_jIB"
+        "id": "W_jl5XH4amwF"
       },
       "execution_count": null,
       "outputs": []
