Inserindo a função que cria a tabela do resumo dos restaurantes

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -255,6 +255,36 @@
         "    return False\n",
         "\n",
         "\n",
+        "def lista_resumida_restaurantes(lista_restaurante):\n",
+        "  \"\"\"\n",
+        "Listagem resumida dos dados dos restaurantes.\n",
+        "há limitação de 16 caracteres para os nomes e 26 para o endereço para que se possa\n",
+        "ver as informações em formato de tabela\n",
+        "  \"\"\"\n",
+        "  string_16_espacos = '               '\n",
+        "  string_26_espacos = '                         '\n",
+        "  print(lista_restaurante[0][0],'           |',\n",
+        "        lista_restaurante[0][1],'                 |',\n",
+        "        lista_restaurante[0][2],'      |' ,\n",
+        "        lista_restaurante[0][3][:16], sep='')\n",
+        "  print('-------------------------------------------------------------------------')\n",
+        "  for restaurante_info in lista_restaurante[1:]:\n",
+        "        nome, endereco, telefone, tempo_preparo = restaurante_info\n",
+        "\n",
+        "        if len(nome) > len(string_16_espacos):\n",
+        "          nome = f'{nome[:12]}...'\n",
+        "        else:\n",
+        "          nome = f'{nome}{string_16_espacos[len(nome):]}'\n",
+        "        print(nome,end='|')\n",
+        "        if len(endereco) > len(string_26_espacos):\n",
+        "          endereco = f'{endereco[:22]}...'\n",
+        "        else:\n",
+        "          endereco = f'{endereco}{string_26_espacos[len(endereco):]}'\n",
+        "        print(endereco,end='|')\n",
+        "        print(telefone, end='|')\n",
+        "        print(tempo_preparo, 'minutos', end='\\n')\n",
+        "  print(\"\\n\")\n",
+        "\n",
         "#################################################\n",
         "#     G E S T Ã O  D E   C A R D Á P I O\n",
         "#23.10 (leticia) adaptei o Listar Cardápio, agora aparecem o nome e o valor do produto no cardápio\n",
@@ -358,8 +388,9 @@
         "Para remover um restaurante    --- R\n",
         "Para editar informações        --- E\n",
         "Para listar os restaurantes    --- L\n",
+        "Para resumo dos restaurantes   --- T\n",
         "\"\"\"\n",
-        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R'])\n",
+        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'T'])\n",
         "\n",
         "  # Adicionando um novo restaurante\n",
         "  if comando == \"A\":\n",
@@ -382,9 +413,6 @@
         "      tempo_preparo_pedido = int(input('Digite tempo de preparo do pedido: '))\n",
         "      lista1.append(tempo_preparo_pedido)\n",
         "\n",
-        "      # Exibir informações do restaurante adicionado\n",
-        "      print(\"Informações adicionadas à lista de restaurantes:\")\n",
-        "      listar([cabecalho_lista_restaurante, lista1]) #isso está errado\n",
         "      lista_restaurante.append(lista1)\n",
         "\n",
         "  # Removendo um restaurante\n",
@@ -442,6 +470,9 @@
         "      else:\n",
         "        listar(lista_cardapio_restaurante)\n",
         "      print(\"\")\n",
+        "  elif comando == 'T':\n",
+        "    lista_resumida_restaurantes(lista_restaurante)\n",
+        "\n",
         "\n",
         "#################################################\n",
         "\n",
@@ -465,11 +496,11 @@
         "######## apenas para testes\n",
         "lista_restaurante = [\n",
         "[\"Nome\", \"Endereço\", \"Telefone\", \"Tempo de Entrega (minutos)\" ],\n",
-        "['Caluma', 'rua 33, número 120, vila sta cecilia', '02433428261', 30.0],\n",
-        "['Toca do Pintado', 'R. Dezenove-A, 278 - Bela Vista', '02432123442', 55.0],\n",
-        "['Brasador Steakhouse', 'R. Vinte e Um, 56 - Vila Santa Cecília', '02433422511', 40],\n",
-        "['Luso Brasileiro', 'Rua 14, 181 Em frente ao Pontual shopping - Vila Santa Cecília', '02433420563', 25.5],\n",
-        "['Alimentare', 'R. Sessenta e Dois, 193 - Sessenta, Volta Redonda', '02433378487', 20.3]]\n",
+        "['Caluma', 'rua 33, número 120, vila sta cecilia', '(24) 3342-8261', 30.0],\n",
+        "['Toca do Pintado', 'R. Dezenove-A, 278 - Bela Vista', '(24) 3212-3442', 55],\n",
+        "['Brasador Steakhouse', 'R. Vinte e Um, 56 - Vila Santa Cecília', '(24) 3342-2511', 40],\n",
+        "['Luso Brasileiro', 'Rua 14, 181 Em frente ao Pontual shopping - Vila Santa Cecília', '(24) 3342-0563', 25],\n",
+        "['Alimentare', 'R. Sessenta e Dois, 193 - Sessenta, Volta Redonda', '(24) 3337-8487', 20]]\n",
         "\n",
         "lista_cardapio = [\n",
         "[\"Restaurante\", \"Nome do Prato\", \"Preço do Prato\"],\n",
@@ -531,9 +562,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "6a6ed9d2-8e6c-4ac8-f863-f8f8e33b7884"
+        "outputId": "712544d9-e57e-4e27-d764-abd5e510ce9c"
       },
-      "execution_count": 71,
+      "execution_count": 166,
       "outputs": [
         {
           "output_type": "stream",
@@ -554,40 +585,25 @@
             "Para remover um restaurante    --- R\n",
             "Para editar informações        --- E\n",
             "Para listar os restaurantes    --- L\n",
-            "a\n",
-            "Digite o nome do restaurante: amanda\n",
-            "Digite as informações do endereço:\n",
-            "Informe a rua:\t\t23\n",
-            "Informe o número:\t423\n",
-            "Informe o bairro:\tvila\n",
-            "Informe a cidade:\tvolta redonda\n",
-            "Informe a sigla da unidade federativa:\trj\n",
-            "Digite as informações do telefone do restaurante: \n",
-            "Informe o DDD:\t23\n",
-            "Informe o número:\t99991018\n",
-            "Digite tempo de preparo do pedido: 90\n",
-            "Informações adicionadas à lista de restaurantes:\n",
-            "  \t Nome\n",
-            "1\t Amanda\n",
+            "Para resumo dos restaurantes   --- T\n",
+            "t\n",
+            "Nome           |Endereço                 |Telefone      |Tempo de Entrega\n",
+            "-------------------------------------------------------------------------\n",
+            "Caluma         |rua 33, número 120, vi...|(24) 3342-8261|30.0 minutos\n",
+            "Toca do Pintado|R. Dezenove-A, 278 - B...|(24) 3212-3442|55 minutos\n",
+            "Brasador Ste...|R. Vinte e Um, 56 - Vi...|(24) 3342-2511|40 minutos\n",
+            "Luso Brasileiro|Rua 14, 181 Em frente ...|(24) 3342-0563|25 minutos\n",
+            "Alimentare     |R. Sessenta e Dois, 19...|(24) 3337-8487|20 minutos\n",
+            "\n",
+            "\n",
             "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
-            "Deseja continuar no sistema? [S]/[N]\tm\n",
-            "Resposta inválida!\n",
-            "Deseja continuar no sistema? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
             "\n",
             "\n",
             "Sistema Encerrado.\n"
           ]
         }
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "W_jl5XH4amwF"
-      },
-      "execution_count": null,
-      "outputs": []
     }
   ]
 }
