inserida opção para sair do menu de pergunta e corrigido edição de nome, telefone e tempo de preparo

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -384,13 +384,17 @@
         "\n",
         "  \"\"\"\n",
         "  pergunta = \"\"\"Qual ação deseja realizar?\n",
-        "Para adicionar um restaurante  --- A\n",
-        "Para remover um restaurante    --- R\n",
-        "Para editar informações        --- E\n",
-        "Para listar os restaurantes    --- L\n",
-        "Para resumo dos restaurantes   --- T\n",
+        "Para adicionar um restaurante          --- A\n",
+        "Para remover um restaurante            --- R\n",
+        "Para editar informações                --- E\n",
+        "Para listar os restaurantes            --- L\n",
+        "Para resumo dos restaurantes           --- T\n",
+        "Para voltar a Gestão de Restaurantes   --- S\n",
         "\"\"\"\n",
-        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'T'])\n",
+        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'T','S'])\n",
+        "\n",
+        "  if comando == 'S':\n",
+        "    return # sair do sistema\n",
         "\n",
         "  # Adicionando um novo restaurante\n",
         "  if comando == \"A\":\n",
@@ -435,13 +439,13 @@
         "          Telefone                   --- T\n",
         "          Tempo de Preparo do Pedido --- P\n",
         "      \"\"\"\n",
-        "      pergunta_edicao = validacao_respostas(pergunta, ['L', 'A', 'E', 'R'])\n",
+        "      pergunta_edicao = validacao_respostas(pergunta, ['N', 'E', 'T', 'P'])\n",
         "\n",
         "      if pergunta_edicao == \"N\":\n",
         "        nome = input('Qual o novo nome? ').title()\n",
         "        lista_restaurante[editar][0] = nome\n",
         "      elif pergunta_edicao == \"E\":\n",
-        "        endereco = input('Qual o novo endereço? ')\n",
+        "        endereco = input('Qual o novo endereço completos? ')\n",
         "        lista_restaurante[editar][1] = formatacao_endereco()\n",
         "      elif pergunta_edicao == \"T\":\n",
         "        print('Qual o novo telefone? ')\n",
@@ -478,7 +482,7 @@
         "\n",
         "# main\n",
         "print(\"Iniciando Sistema de Gestão de Restaurantes\")\n",
-        "print(\"Por aqui pode-se editar informações sobre restaurantes e cardápios\")\n",
+        "print(\"Por aqui você pode gerir informações sobre restaurantes e cardápios\")\n",
         "\n",
         "# inicializando as listas\n",
         "lista_restaurante = list()\n",
@@ -562,42 +566,17 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "712544d9-e57e-4e27-d764-abd5e510ce9c"
+        "outputId": "c7b067c0-fcc9-4081-fe44-be3969473dec"
       },
-      "execution_count": 166,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Iniciando Sistema de Gestão de Restaurantes\n",
-            "Por aqui pode-se editar informações sobre restaurantes e cardápios\n",
-            "Deseja iniciar o sistema? [S]/[N]\ts\n",
-            "\n",
-            "  Próxima Ação:\n",
-            "    1 - Para abrir a gestão de restaurantes\n",
-            "    2 - Para abrir a gestão de Cardápios\n",
-            "    3 - Sair do Sistema \n",
-            "1\n",
-            "- - - - -> Gestão de Restaurantes <- - - - -\n",
-            "Qual ação deseja realizar?\n",
-            "Para adicionar um restaurante  --- A\n",
-            "Para remover um restaurante    --- R\n",
-            "Para editar informações        --- E\n",
-            "Para listar os restaurantes    --- L\n",
-            "Para resumo dos restaurantes   --- T\n",
-            "t\n",
-            "Nome           |Endereço                 |Telefone      |Tempo de Entrega\n",
-            "-------------------------------------------------------------------------\n",
-            "Caluma         |rua 33, número 120, vi...|(24) 3342-8261|30.0 minutos\n",
-            "Toca do Pintado|R. Dezenove-A, 278 - B...|(24) 3212-3442|55 minutos\n",
-            "Brasador Ste...|R. Vinte e Um, 56 - Vi...|(24) 3342-2511|40 minutos\n",
-            "Luso Brasileiro|Rua 14, 181 Em frente ...|(24) 3342-0563|25 minutos\n",
-            "Alimentare     |R. Sessenta e Dois, 19...|(24) 3337-8487|20 minutos\n",
-            "\n",
-            "\n",
-            "Deseja continuar na Gestão de Restaurante? [S]/[N]\tn\n",
-            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
+            "Por aqui você pode gerir informações sobre restaurantes e cardápios\n",
+            "Deseja iniciar o sistema? [S]/[N]\tn\n",
             "\n",
             "\n",
             "Sistema Encerrado.\n"
