feito indice de saida na opção cardapios

--- a/Projeto_Final.ipynb
+++ b/Projeto_Final.ipynb
@@ -302,9 +302,12 @@
         "    print(\"Foi selecionado o seguinte restaurante:\\n-\", restaurante)\n",
         "    pergunta = \"\"\"\n",
         "    Opções de Ações:\n",
-        "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio.\n",
+        "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio ou [N] Para retornar a Gestão de Cardápios.\n",
         "    O que deseja fazer: \\t\"\"\"\n",
-        "    comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R'])\n",
+        "    comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'N'])\n",
+        "\n",
+        "    if comando == 'N':\n",
+        "        return\n",
         "\n",
         "    # adicionando um novo prato ao cardápio\n",
         "    if comando == \"A\":\n",
@@ -389,11 +392,11 @@
         "Para editar informações                --- E\n",
         "Para listar os restaurantes            --- L\n",
         "Para resumo dos restaurantes           --- T\n",
-        "Para voltar a Gestão de Restaurantes   --- S\n",
+        "Para voltar a Gestão de Restaurantes   --- N\n",
         "\"\"\"\n",
-        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'T','S'])\n",
+        "  comando = validacao_respostas(pergunta, ['L', 'A', 'E', 'R', 'T','N'])\n",
         "\n",
-        "  if comando == 'S':\n",
+        "  if comando == 'N':\n",
         "    return # sair do sistema\n",
         "\n",
         "  # Adicionando um novo restaurante\n",
@@ -566,9 +569,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "qwbRTZSDwkQY",
-        "outputId": "c7b067c0-fcc9-4081-fe44-be3969473dec"
+        "outputId": "2ce97d19-101d-490b-e15e-c71d2f9fc853"
       },
-      "execution_count": 8,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -576,7 +579,31 @@
           "text": [
             "Iniciando Sistema de Gestão de Restaurantes\n",
             "Por aqui você pode gerir informações sobre restaurantes e cardápios\n",
-            "Deseja iniciar o sistema? [S]/[N]\tn\n",
+            "Deseja iniciar o sistema? [S]/[N]\ts\n",
+            "\n",
+            "  Próxima Ação:\n",
+            "    1 - Para abrir a gestão de restaurantes\n",
+            "    2 - Para abrir a gestão de Cardápios\n",
+            "    3 - Sair do Sistema \n",
+            "2\n",
+            "- - - - -> Gestão de Cardápios <- - - - -\n",
+            "Informe o restaurante:\t\n",
+            "  \t Nome\n",
+            "1\t Caluma\n",
+            "2\t Toca do Pintado\n",
+            "3\t Brasador Steakhouse\n",
+            "4\t Luso Brasileiro\n",
+            "5\t Alimentare\n",
+            "Informe o índice: \t2\n",
+            "\t\tGESTÃO DE CARDÁPIO:\n",
+            "Foi selecionado o seguinte restaurante:\n",
+            "- Toca do Pintado\n",
+            "\n",
+            "    Opções de Ações:\n",
+            "    [L] Listar, [A] Adicionar, [E] Editar ou [R] Remover itens do cardápio ou [N] Para retornar a Gestão de Cardápios.\n",
+            "    O que deseja fazer: \tn\n",
+            "Deseja continuar na Gestão de Cardápios? [S]/[N]\tn\n",
+            "Deseja continuar no Sistema de Gerenciamento? [S]/[N]\tn\n",
             "\n",
             "\n",
             "Sistema Encerrado.\n"
